Bug 496387 - Dolphin crashes when renaming a folder that has its own tab with search open
Summary: Dolphin crashes when renaming a folder that has its own tab with search open
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.3
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-17 17:08 UTC by postix
Modified: 2024-11-27 10:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bt full (48.77 KB, text/plain)
2024-11-17 17:08 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2024-11-17 17:08:32 UTC
Created attachment 175881 [details]
bt full

STEPS TO REPRODUCE
1. Open Dolphin
2. Maybe have a second tab opened with the Documents folder - not sure
3. Rename "Documents" to "Documents Charlie" in Dolphin via the context menu

OBSERVED RESULT
Dolphin crashed.

```
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007f5339080693 in __pthread_kill_internal (threadid=<optimized out>, signo=11) at pthread_kill.c:78
#2  0x00007f5339027d1e in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#3  0x00007f533bb801a2 in KCrash::defaultCrashHandler (sig=11) at /usr/src/debug/kf6-kcrash-6.8.0-1.fc41.x86_64/src/kcrash.cpp:596
#4  <signal handler called>
#5  0x00007f533c0b9bc0 in KUrlNavigator::setLocationUrl (this=0x0, newUrl=...) at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/src/filewidgets/kurlnavigator.cpp:1114
#6  0x00005613d34a9102 in DolphinViewContainer::setSearchModeEnabled (this=0x56140d0c22d0, enabled=false) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/src/dolphinviewcontainer.cpp:484
#7  0x00005613d34a92fd in DolphinViewContainer::redirect (this=0x56140d0c22d0, oldUrl=..., newUrl=...) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/src/dolphinviewcontainer.cpp:860
#8  0x00007f533975bac1 in QtPrivate::QSlotObjectBase::call (this=0x56140d292170, r=<optimized out>, a=0x7ffc95398510) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#9  doActivate<false> (sender=0x56140d2cec20, signal_index=38, argv=0x7ffc95398510) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#10 0x00007f53397520c7 in QMetaObject::activate (sender=<optimized out>, m=<optimized out>, local_signal_index=local_signal_index@entry=31, argv=argv@entry=0x7ffc95398510)
    at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#11 0x00007f533c1fed40 in DolphinView::redirection (this=<optimized out>, _t1=..., _t2=...) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/redhat-linux-build/src/dolphinprivate_autogen/include/moc_dolphinview.cpp:1541
#12 0x00007f533c1f176e in DolphinView::slotDirectoryRedirection (this=0x56140d2cec20, oldUrl=..., newUrl=...) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/src/views/dolphinview.cpp:1710
#13 DolphinView::slotDirectoryRedirection (this=0x56140d2cec20, oldUrl=..., newUrl=...) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/src/views/dolphinview.cpp:1707
#14 0x00007f533975bac1 in QtPrivate::QSlotObjectBase::call (this=0x56140d2eaae0, r=<optimized out>, a=0x7ffc95398680) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#15 doActivate<false> (sender=0x56140d356100, signal_index=19, argv=0x7ffc95398680) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#16 0x00007f53397520c7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f533c2d2d40, local_signal_index=local_signal_index@entry=8, argv=argv@entry=0x7ffc95398680)
    at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#17 0x00007f533c176970 in KFileItemModel::directoryRedirection (this=<optimized out>, _t1=..., _t2=...) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/redhat-linux-build/src/dolphinprivate_autogen/include/moc_kfileitemmodel.cpp:426
#18 0x00007f533975bac1 in QtPrivate::QSlotObjectBase::call (this=0x56140d357240, r=<optimized out>, a=0x7ffc953987a0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#19 doActivate<false> (sender=0x56140d356380, signal_index=8, argv=0x7ffc953987a0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#20 0x00007f53397520c7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f533bd06c20, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7ffc953987a0)
    at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#21 0x00007f533bc43780 in KCoreDirLister::redirection (this=<optimized out>, _t1=..., _t2=...) at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/redhat-linux-build/src/core/KF6KIOCore_autogen/include/moc_kcoredirlister.cpp:515
#22 0x00007f533bc365bc in KCoreDirListerCache::emitRedirections (this=<optimized out>, _oldUrl=..., _newUrl=...) at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/src/core/kcoredirlister.cpp:1642
#23 KCoreDirListerCache::renameDir (this=0x56140cd0abf0, oldUrl=..., newUrl=...) at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/src/core/kcoredirlister.cpp:1583
#24 KCoreDirListerCache::slotFileRenamed (this=0x56140cd0abf0, _src=..., _dst=..., dstPath=...) at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/src/core/kcoredirlister.cpp:928
#25 0x00007f533975bac1 in QtPrivate::QSlotObjectBase::call (this=0x56140cced7d0, r=<optimized out>, a=0x7ffc95398b50) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#26 doActivate<false> (sender=0x56140ccee960, signal_index=4, argv=0x7ffc95398b50) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#27 0x00007f53397520c7 in QMetaObject::activate (sender=<optimized out>, m=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffc95398b50)
    at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#28 0x00007f533bc6cd34 in OrgKdeKDirNotifyInterface::FileRenamedWithLocalPath (this=<optimized out>, _t1=..., _t2=..., _t3=...)
    at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/redhat-linux-build/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:255
#29 0x00007f533bc6d0b4 in OrgKdeKDirNotifyInterface::qt_static_metacall (_o=_o@entry=0x56140ccee960, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=1, _a=_a@entry=0x7ffc95398d18)
    at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/redhat-linux-build/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:144
#30 0x00007f533bc71b62 in OrgKdeKDirNotifyInterface::qt_metacall (this=0x56140ccee960, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffc95398d18)
    at /usr/src/debug/kf6-kio-6.8.0-1.fc41.x86_64/redhat-linux-build/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:234
#31 0x00007f533b0ba237 in QDBusConnectionPrivate::deliverCall (this=0x7f531c0016c0, object=0x56140ccee960, msg=..., metaTypes=..., slotIdx=6) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/dbus/qdbusintegrator.cpp:1008
#32 0x00007f533974d172 in QObject::event (this=0x56140ccee960, e=0x7f531c043ee0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:1419
#33 0x00007f533a83d6b8 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x56140ccee960, e=0x7f531c043ee0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/widgets/kernel/qapplication.cpp:3294
#34 0x00007f53396f3a38 in QCoreApplication::notifyInternal2 (receiver=0x56140ccee960, event=0x7f531c043ee0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1165
#35 0x00007f53396f3c8d in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1609
#36 0x00007f53396f7765 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x56140c69c190) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1965
#37 0x00007f53396f8b6d in QCoreApplication::sendPostedEvents (receiver=<optimized out>, event_type=<optimized out>) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1797
#38 0x00007f53399ea68f in postEventSourceDispatch (s=0x56140c6ecad0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#39 0x00007f53364f128c in g_main_dispatch (context=0x7f531c000f30) at ../glib/gmain.c:3357
#40 g_main_context_dispatch_unlocked (context=0x7f531c000f30) at ../glib/gmain.c:4208
#41 0x00007f53365517b8 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f531c000f30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4273
#42 0x00007f53364f2783 in g_main_context_iteration (context=0x7f531c000f30, may_block=1) at ../glib/gmain.c:4338
#43 0x00007f53399e9de3 in QEventDispatcherGlib::processEvents (this=0x56140c69eb50, flags=...) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:396
#44 0x00007f533970221b in QEventLoop::exec (this=this@entry=0x7ffc95399440, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/global/qflags.h:34
#45 0x00007f53396fda2e in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/global/qflags.h:74
#46 0x00007f5339ed723d in QGuiApplication::exec () at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/gui/kernel/qguiapplication.cpp:1975
#47 0x00007f533a83d629 in QApplication::exec () at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/widgets/kernel/qapplication.cpp:2562
#48 0x00005613d348681d in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/dolphin-24.08.3-1.fc41.x86_64/src/main.cpp:273
```


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Kernel Version: 6.11.7-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Dolphin 24.08.3
Comment 1 Akseli Lahtinen 2024-11-22 11:41:36 UTC
Can confirm, but the tab which name youre changing in has to have searchmode enabled.

1. Create a folder "test
2. Open new tab in "test" folder
3. Change to the "test" folder tab, toggle search by pressing ctrl+f
4. Change back to the first tab
5. Rename folder "test" to "anything"
6. Crash!

Backtrace:

(gdb) bt
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0)
at pthread_kill.c:44
#1  0x00007f4a9aa80693 in __pthread_kill_internal (threadid=<optimized out>, signo=11) at pthread_kill.c:78
#2  0x00007f4a9aa27d1e in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#3  0x00007f4a9df965ab in KCrash::defaultCrashHandler (sig=11)
at /home/akseli/Repositories/kde/src/kcrash/src/kcrash.cpp:596
#4  0x00007f4a9aa27dd0 in <signal handler called> () at /lib64/libc.so.6
#5  0x00007f4a9e8bf321 in KUrlNavigator::setLocationUrl (this=0x0, newUrl=...)
at /home/akseli/Repositories/kde/src/kio/src/filewidgets/kurlnavigator.cpp:1157
#6  0x0000000000431a77 in DolphinViewContainer::setSearchModeEnabled (this=0x29aef540, enabled=false)
at /home/akseli/Repositories/kde/src/dolphin/src/dolphinviewcontainer.cpp:500
#7  0x0000000000431bf8 in DolphinViewContainer::redirect (this=0x29aef540, oldUrl=<optimized out>, newUrl=...)
at /home/akseli/Repositories/kde/src/dolphin/src/dolphinviewcontainer.cpp:897
#8  0x00007f4a9b15bac1 in QtPrivate::QSlotObjectBase::call (this=0x29a38d60, r=<optimized out>, a=0x7ffcfef69940)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#9  doActivate<false> (sender=0x298f5b20, signal_index=38, argv=0x7ffcfef69940)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#10 0x00007f4a9b1520c7 in QMetaObject::activate
(sender=sender@entry=0x298f5b20, m=m@entry=0x7f4a9eaf6440, local_signal_index=local_signal_index@entry=31, argv=argv@entry=0x7ffcfef69940) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#11 0x00007f4a9ea07b1a in DolphinView::redirection (this=this@entry=0x298f5b20, _t1=..., _t2=...)
at /home/akseli/Repositories/kde/build/dolphin/src/dolphinprivate_autogen/include/moc_dolphinview.cpp:1525
#12 0x00007f4a9ea088e6 in DolphinView::slotDirectoryRedirection (this=0x298f5b20, oldUrl=..., newUrl=...)
at /home/akseli/Repositories/kde/src/dolphin/src/views/dolphinview.cpp:1730
#13 DolphinView::slotDirectoryRedirection (this=0x298f5b20, oldUrl=..., newUrl=...)
at /home/akseli/Repositories/kde/src/dolphin/src/views/dolphinview.cpp:1727
#14 0x00007f4a9b15bac1 in QtPrivate::QSlotObjectBase::call (this=0x29b7d9c0, r=<optimized out>, a=0x7ffcfef69aa0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#15 doActivate<false> (sender=0x299205e0, signal_index=19, argv=0x7ffcfef69aa0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#16 0x00007f4a9b1520c7 in QMetaObject::activate
(sender=<optimized out>, m=m@entry=0x7f4a9eaf0740, local_signal_index=local_signal_index@entry=8, argv=argv@entry=0x7ffcfef69aa0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#17 0x00007f4a9e96b91a in KFileItemModel::directoryRedirection
--Type <RET> for more, q to quit, c to continue without paging--c
(this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>)
at /home/akseli/Repositories/kde/build/dolphin/src/dolphinprivate_autogen/include/moc_kfileitemmodel.cpp:426
^[[A#18 0x00007f4a9b15bac1 in QtPrivate::QSlotObjectBase::call (this=0x298fd280, r=<optimized out>, a=0x7ffcfef69bc0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#19 doActivate<false> (sender=0x299207e0, signal_index=8, argv=0x7ffcfef69bc0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#20 0x00007f4a9b1520c7 in QMetaObject::activate
(sender=<optimized out>, m=m@entry=0x7f4a9e13ef20, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7ffcfef69bc0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#21 0x00007f4a9e058efa in KCoreDirLister::redirection (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>)
at /home/akseli/Repositories/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_kcoredirlister.cpp:515
#22 0x00007f4a9e068e4c in KCoreDirListerCache::emitRedirections (this=this@entry=0x29157bf0, _oldUrl=..., _newUrl=...)
at /home/akseli/Repositories/kde/src/kio/src/core/kcoredirlister.cpp:1642
#23 0x00007f4a9e06e329 in KCoreDirListerCache::renameDir (this=0x29157bf0, oldUrl=..., newUrl=...)
at /home/akseli/Repositories/kde/src/kio/src/core/kcoredirlister.cpp:1583
#24 0x00007f4a9e06f575 in KCoreDirListerCache::slotFileRenamed
(this=0x29157bf0, _src=<optimized out>, _dst=<optimized out>, dstPath=...)
at /home/akseli/Repositories/kde/src/kio/src/core/kcoredirlister.cpp:928
#25 0x00007f4a9b15bac1 in QtPrivate::QSlotObjectBase::call (this=0x28e294b0, r=<optimized out>, a=0x7ffcfef6a0f0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#26 doActivate<false> (sender=0x28fe6080, signal_index=4, argv=0x7ffcfef6a0f0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4120
#27 0x00007f4a9b1520c7 in QMetaObject::activate
(sender=<optimized out>, m=m@entry=0x7f4a9e13fec0, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffcfef6a0f0) at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:4180
#28 0x00007f4a9e0abb7f in OrgKdeKDirNotifyInterface::FileRenamedWithLocalPath
(this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>, _t3=<optimized out>)
at /home/akseli/Repositories/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:255
#29 0x00007f4a9e0abdd4 in OrgKdeKDirNotifyInterface::qt_static_metacall
(_o=_o@entry=0x28fe6080, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=1, _a=_a@entry=0x7ffcfef6a298)
at /home/akseli/Repositories/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:144
#30 0x00007f4a9e0ad163 in OrgKdeKDirNotifyInterface::qt_metacall
(this=0x28fe6080, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffcfef6a298)
at /home/akseli/Repositories/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_kdirnotify.cpp:234
#31 0x00007f4a9ccb8237 in QDBusConnectionPrivate::deliverCall
(this=0x7f4a800016c0, object=0x28fe6080, msg=..., metaTypes=<optimized out>, slotIdx=6)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/dbus/qdbusintegrator.cpp:1008
#32 0x00007f4a9b14d172 in QObject::event (this=0x28fe6080, e=0x7f4a8002a750)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qobject.cpp:1419
#33 0x00007f4a9c23d6b8 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x28fe6080, e=0x7f4a8002a750)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/widgets/kernel/qapplication.cpp:3294
#34 0x00007f4a9b0f3a38 in QCoreApplication::notifyInternal2 (receiver=0x28fe6080, event=0x7f4a8002a750)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1165
#35 0x00007f4a9b0f3c8d in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1609
#36 0x00007f4a9b0f7765 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x28ac4030)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1965
#37 0x00007f4a9b0f8b6d in QCoreApplication::sendPostedEvents (receiver=<optimized out>, event_type=<optimized out>)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qcoreapplication.cpp:1797
#38 0x00007f4a9b3ea68f in postEventSourceDispatch (s=0x28b4f6b0)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#39 0x00007f4a97ea128c in g_main_dispatch (context=0x7f4a80000f30) at ../glib/gmain.c:3357
#40 g_main_context_dispatch_unlocked (context=0x7f4a80000f30) at ../glib/gmain.c:4208
#41 0x00007f4a97f017b8 in g_main_context_iterate_unlocked.isra.0
(context=context@entry=0x7f4a80000f30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
at ../glib/gmain.c:4273
#42 0x00007f4a97ea2783 in g_main_context_iteration (context=0x7f4a80000f30, may_block=1) at ../glib/gmain.c:4338
#43 0x00007f4a9b3e9de3 in QEventDispatcherGlib::processEvents (this=0x28ac7f20, flags=...)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:396
#44 0x00007f4a9b10221b in QEventLoop::exec (this=this@entry=0x7ffcfef6a9c0, flags=..., flags@entry=...)
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/global/qflags.h:34
#45 0x00007f4a9b0fda2e in QCoreApplication::exec ()
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/corelib/global/qflags.h:74
#46 0x00007f4a9b8d723d in QGuiApplication::exec ()
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/gui/kernel/qguiapplication.cpp:1975
#47 0x00007f4a9c23d629 in QApplication::exec ()
at /usr/src/debug/qt6-qtbase-6.8.0-4.fc41.x86_64/src/widgets/kernel/qapplication.cpp:2562
#48 0x000000000040bcfd in main (argc=<optimized out>, argv=<optimized out>)
at /home/akseli/Repositories/kde/src/dolphin/src/main.cpp:275

System info:
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.0
Kernel Version: 6.11.8-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2024-11-26 13:57:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/864
Comment 3 postix 2024-11-26 14:45:06 UTC
Thanks Akseli, you may also want to look into #496414, which is a similar renaming issue. :)
Comment 4 Akseli Lahtinen 2024-11-26 18:34:14 UTC
(In reply to postix from comment #3)
> Thanks Akseli, you may also want to look into #496414, which is a similar
> renaming issue. :)

No worries and it's on my list! :D
Comment 5 Akseli Lahtinen 2024-11-27 10:00:07 UTC
Git commit c4ecf1cb2bf199ddccd02990429b535385475ffc by Akseli Lahtinen.
Committed on 27/11/2024 at 10:00.
Pushed by akselmo into branch 'master'.

DolphinViewContainer: set searchPath on redirect, check for connected urlNavigator

This fixes a dolphin crash if tab with a search box open gets its path
changed while its not active.

This patch adds a guard for the m_urlNavigatorConnected->setLocation,
and makes sure the searchPath is set to the correct folder.

M  +4    -1    src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/-/commit/c4ecf1cb2bf199ddccd02990429b535385475ffc
Comment 6 Akseli Lahtinen 2024-11-27 10:28:21 UTC
Git commit 67b319b7fc27254c8a7ee8f72f5fc7b10b0c4552 by Akseli Lahtinen.
Committed on 27/11/2024 at 10:28.
Pushed by akselmo into branch 'master'.

DolphinViewContainer: setSearchPath value only if searchBox is active

Fixes a crash when searchbox is not active and tab gets renamed.

I forgot to add this to merge request
https://invent.kde.org/system/dolphin/-/merge_requests/864

M  +3    -1    src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/-/commit/67b319b7fc27254c8a7ee8f72f5fc7b10b0c4552