DolphinViewContainer: set searchPath on redirect, check for connected urlNavigator

This fixes a dolphin crash if tab with a search box open gets its path
changed while its not active.

This patch adds a guard for the m_urlNavigatorConnected->setLocation,
and makes sure the searchPath is set to the correct folder.

BUG:496387